# wms/schema/rest/openapi_compiled.json
@@ -925,7 +925,7 @@
                 }
             }
         },
-        "/tms/taskforce/stop/{taskforce_uuid}": {
+        "/taskforce/tms-action/pending-stopper/{taskforce_uuid}": {
             "parameters": [
                 {
                     "$ref": "#/components/parameters/TaskforceUUIDParam"
@@ -1141,7 +1141,7 @@
                 }
             }
         },
-        "/tms/taskforce/stop": {
+        "/taskforce/tms-action/pending-stopper": {
             "parameters": [],
             "get": {
                 "parameters": [
